--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 *{
-      /* font-family: "Lobster Two", sans-serif; */
+    margin: 0;
 padding: 0;
 text-decoration: none;
 list-style: none;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .container{
     width: 90%;
