--- a/css/main.css
+++ b/css/main.css
@@ -5,134 +5,103 @@ text-decoration: none;
 list-style: none;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.container{
-    width: 90%;
+/* start section navbar */
+
+.navbar-1{
+
+    background-color: black;
+    color: white;
 }
-.navbar{
-    background-color:rgb(1, 1, 1);
-    display: flex;
-    justify-content: space-around;
+.navbar-1 .nav-logo{
+    width: 20%;
+    text-align: center;
 }
-.nav-logo{
-    width:30%;
+.navbar-1 .nav-logo h2{
+    font-size: 20px;
 }
-.navbar .nav-logo h1{
-    font-size: x-large;
-    width: 70px;
-    color: rgb(245, 245, 245);
-  }
-   .navbar .nav-menu{
-        width: 30%;
-       
+.nav-menu ul li a{
+    text-decoration: none;
+    color: white;
 
+}
+.nav-links{
+    width: 10%;
+}
+.nav-links ul li i{
+    font-size: 18px;
+    color: white;
+}
+/* start section pro-details */
+/* start section home */
+#home{
+     background-image: url('D:\WORK\mohamed mohab\Hatric website\Hattrick-project\imgs');
+    background-size: 100% 100%;
+    background-position: center;
+    text-align: center;
+    height: 100vh;
+}
+.home-text{
+    background-color: blue;
+}
+.pro-details{
+    margin-top: 50PX;
+    
+}
 
-   }
-  .navbar ul{
-     display: flex;
-     justify-content: space-evenly;
-     padding-top: 10px;
+.pro-details-img{
+    margin-bottom: 50PX;
+    margin-top: 50PX;
 
-  }
-   .navbar ul li a{
-     color: #fff;
-     font-weight: 600;
-     font-size: large;
-   }
-   #home{
-    background-color: rgb(255, 255, 255);
-    width: 100% ;
-   }
-   #home .home {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-   }
-   
-   .home-img{
-     width: 30%;
-     padding: 50px 50px;
-   }
-    .home  .home-img img{
-        width: 400px;
-        height: 500px;
-        margin: 10px 30px;
-        border: 10px solid #eee;
-        border-radius: 20px;
-
-    }
-    .home-text{
-        display: flex;
-        flex-direction: column;
-
-
-    }
-    .home .home-text-1 h2{
-        
-        font-size: 30px;
-        padding-left: 30px;
-    }
-    .home .home-text-1 h3{
-        
-        font-size: 30px;
-    }
-   .home-text-2{
-         display: flex;
-         flex-direction: column;
-         width: 60%;
-
-   }
-   .price h3{
-    margin-top: 50px;
-   }
-    .counter{
-        margin: 70px 20px;
-        background-color: #eee;
-        height: 30%;
-        border: 1px black solid;
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        width: 50%;
-
-    }
  
-    .counter-2{
-        width: 80px;
-        height: 30px;
-        border: 1px black solid;
-        text-align: center;
-        padding-top: 10px ;
-    } 
-     .control{
-         width:20%;
-         display: flex;
+}
 
-     }
-    .control input{
-        color:#000;
-        font-size: 18px;
-        font-weight: 200;
-        background-color: #eee;
-        border :2px solid rgb(94, 94, 94);
-        width:150px;
-        margin: 10px 5px;
-        padding: 10px 10px;
-        text-align: center;
+.pro-details .pro-details-img img{
+    width: 100%;
+    height: 75%;
 
-        
-    }
-     .description{
-        margin-top: 150px;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            flex-direction:column;
-     }
-    .description p{
-        color: #393737;
-        font-size: 24px;
-        font-weight:250;
-        text-align: center;
+}
+/* ================ */
+.pro-details-data{
+position: relative;
+height: 90vh;
+}
+.pro-details-title{
+position: absolute;
+top: 10px;
+left: 0;
 
+}
+.pro-details-title h2{
+    margin: 20px 0;
+    text-transform: uppercase;
+}
+.pro-details-title h2 span{
+    font-size: 18px;
+}
 
-    }
+.pro-details-title h3{
+    margin: 20px 0;
+}
+.pro-details-title p{
+    font-size: 18px;
+     margin: 20px 0;
+}
+/* ================ */
+.pro-details-title a{
+    background-color: black;
+    width: 120px;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50px;
+    color: white;
+    text-decoration: none;
+    padding: 10px 2px;
+    text-align: center;
+    top:170%;
+    left: 20px;
+}
+.pro-details-text .table{
+    position: absolute;
+    bottom: 20%;
+    left: 10px;
+}
