--- a/css/shop.css
+++ b/css/shop.css
@@ -47,6 +47,39 @@ a{
     text-align: center;
     line-height: 1em;
 }
+.card-2{
+    margin-top: 50px;
+}
+.card-2 img{
+    width: 100%;
+    height: 70vh;
+    
+}
+#pro-1 .data{
+    margin-top: 50px;
+    text-align: center;
+    
+}
+.pro-data{
+    position: relative;
+    background-color: brown;
+    margin-top: 50px;
+  
+}
+.pro-data a{
+      background-color: black;
+    width: 120px;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50px;
+    color: white;
+    text-decoration: none;
+    padding: 10px 2px;
+    text-align: center;
+    bottom:220px;
+    left: 10px;
+}
+
 
 
 @media screen and (max-width:576px){
@@ -56,4 +89,10 @@ a{
  font-size:70px;
 
 }
+}
+.pro-details-title{
+    position: absolute;
+    bottom:120px;
+    left: 10px;
+   
 }
