--- a/css/shop.css
+++ b/css/shop.css
@@ -52,7 +52,7 @@ a{
 }
 .card-2 img{
     width: 100%;
-    height: 70vh;
+    height: 60vh;
     
 }
 #pro-1 .data{
@@ -64,6 +64,7 @@ a{
     position: relative;
     background-color: brown;
     margin-top: 50px;
+
   
 }
 .pro-data a{
@@ -75,9 +76,11 @@ a{
     color: white;
     text-decoration: none;
     padding: 10px 2px;
+    align-items: center;
     text-align: center;
-    bottom:220px;
-    left: 10px;
+   top: 195px;
+    left: 0px;
+
 }
 
 
@@ -90,9 +93,11 @@ a{
 
 }
 }
-.pro-details-title{
+.pro-details-title {
     position: absolute;
-    bottom:120px;
-    left: 10px;
-   
+    bottom: 20px;
+    left: 0;
 }
+   
+
+
