--- a/css/shop.css
+++ b/css/shop.css
@@ -1,6 +1,7 @@
 *{
     text-decoration: none !important;
     text-transform: capitalize;
+    text-align: start;
 }
 a{
     color: white;
@@ -41,6 +42,7 @@ a{
     font-size: 20px;
     text-transform: capitalize;
     text-align: center;
+    color: red;
 }
 
 .card p{
