--- a/css/shop.css
+++ b/css/shop.css
@@ -85,7 +85,11 @@ a{
 
 }
 
-
+#SHOP button{
+    width: 40%;
+    margin: auto;
+    margin-bottom: 20px;
+}
 
 @media screen and (max-width:576px){
 
@@ -131,6 +135,3 @@ a{
     bottom: 20px;
     left: 0;
 }
-   
-
-
