--- a/css/shop.css
+++ b/css/shop.css
@@ -51,6 +51,8 @@ a{
 }
 .card-2{
     margin-top: 50px;
+        width: 75%;
+
 }
 .card-2 img{
     width: 100%;
@@ -102,7 +104,14 @@ a{
  font-size:70px;
  text-align: center;
 
-}#pro-1 .data{
+
+}.card-2{
+    margin-top: 50px;
+    width: 85%;
+    margin: auto;
+
+}
+#pro-1 .data{
     margin-top: 5px;
     text-align: center;
     
